fix spacing errors

--- a/src/scss/components/_scrollto.scss
+++ b/src/scss/components/_scrollto.scss
@@ -2,7 +2,7 @@
   cursor: pointer;
   font-size: $font-size-l;
   position: relative;
-  top: 20px;
+  top: -10px;
   &:hover {
     color: $color-primary;
   }
