--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -13,7 +13,7 @@ $font-size-xl: 3.5rem;
 $font-size-l: 2rem;
 $font-size-m: 1.3rem;
 $font-size-s: 1rem;
-$font-size-xs: .7rem;
+$font-size-xs: .8rem;
 
 /* Color */
 $color-primary: #e60856;
