--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -35,8 +35,7 @@
     }
     &__description {
       text-align: left;
-      letter-spacing: 2px;
-      font-size: $font-size-xs;
+      font-size: $font-size-s;
       width: 317px;
     }
     &__button {
